--- a/app/src/main/res/layout/activity_character.xml
+++ b/app/src/main/res/layout/activity_character.xml
@@ -30,6 +30,7 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:background="@drawable/image_border"
+                android:contentDescription="@string/itemDescription"
                 app:srcCompat="@drawable/button_round" />
 
             <ImageView
@@ -37,6 +38,7 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:background="@drawable/image_border"
+                android:contentDescription="@string/itemDescription"
                 app:srcCompat="@mipmap/ic_launcher" />
 
         </TableRow>
@@ -51,6 +53,7 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:background="@drawable/image_border"
+                android:contentDescription="@string/itemDescription"
                 app:srcCompat="@drawable/sword"
                 android:onClick="equipItem"/>
 
@@ -59,6 +62,7 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:background="@drawable/image_border"
+                android:contentDescription="@string/itemDescription"
                 app:srcCompat="@drawable/settings_small" />
         </TableRow>
 
@@ -70,12 +74,14 @@
                 android:id="@+id/imageView5"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
+                android:contentDescription="@string/itemDescription"
                 app:srcCompat="@drawable/image_border" />
 
             <ImageView
                 android:id="@+id/imageView6"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
+                android:contentDescription="@string/itemDescription"
                 android:background="@drawable/image_border" />
 
         </TableRow>
@@ -88,12 +94,14 @@
                 android:id="@+id/imageView10"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
+                android:contentDescription="@string/itemDescription"
                 android:background="@drawable/image_border" />
 
             <ImageView
                 android:id="@+id/imageView12"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
+                android:contentDescription="@string/itemDescription"
                 app:srcCompat="@drawable/image_border" />
         </TableRow>
     </TableLayout>
@@ -108,6 +116,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:contentDescription="@string/character"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.036"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -121,8 +130,9 @@
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="141dp"
+        android:layout_marginStart="141dp"
         android:layout_marginTop="156dp"
+        android:contentDescription="@string/leftHand"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -137,6 +147,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
+        android:contentDescription="@string/rightHand"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.023"
         app:layout_constraintLeft_toLeftOf="parent"
