--- a/app/src/main/res/layout/activity_character.xml
+++ b/app/src/main/res/layout/activity_character.xml
@@ -26,20 +26,22 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:id="@+id/imageView1"
+                android:id="@+id/item1"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:background="@drawable/image_border"
                 android:contentDescription="@string/itemDescription"
-                app:srcCompat="@drawable/button_round" />
+                android:onClick="equipItem"
+                android:src="@drawable/button_round" />
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/item2"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:background="@drawable/image_border"
                 android:contentDescription="@string/itemDescription"
-                app:srcCompat="@mipmap/ic_launcher" />
+                android:onClick="equipItem"
+                android:src="@mipmap/ic_launcher" />
 
         </TableRow>
 
@@ -49,21 +51,22 @@
             android:clipChildren="false">
 
             <ImageView
-                android:id="@+id/imageView3"
+                android:id="@+id/item3"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:background="@drawable/image_border"
                 android:contentDescription="@string/itemDescription"
-                app:srcCompat="@drawable/sword"
-                android:onClick="equipItem"/>
+                android:onClick="equipItem"
+                android:src="@drawable/sword" />
 
             <ImageView
-                android:id="@+id/imageView4"
+                android:id="@+id/item4"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:background="@drawable/image_border"
                 android:contentDescription="@string/itemDescription"
-                app:srcCompat="@drawable/settings_small" />
+                android:onClick="equipItem"
+                android:src="@drawable/settings_small" />
         </TableRow>
 
         <TableRow
@@ -71,18 +74,20 @@
             android:layout_height="match_parent" >
 
             <ImageView
-                android:id="@+id/imageView5"
+                android:id="@+id/item5"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:contentDescription="@string/itemDescription"
-                app:srcCompat="@drawable/image_border" />
+                android:onClick="equipItem"
+                android:src="@drawable/image_border" />
 
             <ImageView
-                android:id="@+id/imageView6"
+                android:id="@+id/item6"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
+                android:background="@drawable/image_border"
                 android:contentDescription="@string/itemDescription"
-                android:background="@drawable/image_border" />
+                android:onClick="equipItem" />
 
         </TableRow>
 
@@ -91,18 +96,20 @@
             android:layout_height="match_parent" >
 
             <ImageView
-                android:id="@+id/imageView10"
+                android:id="@+id/item7"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
+                android:background="@drawable/image_border"
                 android:contentDescription="@string/itemDescription"
-                android:background="@drawable/image_border" />
+                android:onClick="equipItem" />
 
             <ImageView
-                android:id="@+id/imageView12"
+                android:id="@+id/item8"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:contentDescription="@string/itemDescription"
-                app:srcCompat="@drawable/image_border" />
+                android:onClick="equipItem"
+                android:src="@drawable/image_border" />
         </TableRow>
     </TableLayout>
 
@@ -123,21 +130,25 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.497"
-        app:srcCompat="@drawable/boy_character" />
+        android:src="@drawable/boy_character" />
 
     <ImageView
         android:id="@+id/leftHand"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
+        android:layout_width="30dp"
+        android:layout_height="62dp"
         android:layout_marginBottom="8dp"
         android:layout_marginStart="141dp"
         android:layout_marginTop="156dp"
         android:contentDescription="@string/leftHand"
+        android:onClick="unequipItem"
+        android:rotationX="90%"
+        android:rotationY="100"
+        android:src="@drawable/stone"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.173"
-        app:srcCompat="@drawable/stone" />
+        app:layout_constraintVertical_bias="0.133" />
 
     <ImageView
         android:id="@+id/rightHand"
@@ -148,11 +159,12 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:contentDescription="@string/rightHand"
+        android:src="@drawable/stone"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.023"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.582"
-        app:srcCompat="@drawable/stone" />
+        app:layout_constraintVertical_bias="0.582" />
 </android.support.constraint.ConstraintLayout>
