--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,19 +7,16 @@
 
     <ImageView
         android:background="@drawable/background"
-        android:layout_width="0dp"
-        android:layout_height="495dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:id="@+id/backgroundPicture"
         android:scaleType="fitXY"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        android:layout_marginStart="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:ignore="contentDescription"
-        android:layout_marginBottom="8dp" />
+        tools:ignore="contentDescription" />
 
     <Button
         android:id="@+id/startQuestBtn"
@@ -29,11 +26,11 @@
         android:layout_alignStart="@+id/characterBtn"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="61dp"
+        android:layout_marginTop="113dp"
         android:background="@drawable/button"
         android:onClick="startQuest"
         android:text="Start Quest"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/backgroundPicture" />
