--- a/app/src/main/res/layout/activity_character.xml
+++ b/app/src/main/res/layout/activity_character.xml
@@ -141,14 +141,16 @@
         android:layout_marginTop="156dp"
         android:contentDescription="@string/leftHand"
         android:onClick="unequipItem"
-        android:rotationX="90%"
-        android:rotationY="100"
         android:src="@drawable/stone"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.133" />
+        app:layout_constraintVertical_bias="0.13"
+        android:layout_marginLeft="141dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.0" />
 
     <ImageView
         android:id="@+id/rightHand"
