--- a/app/src/main/res/layout/activity_the_road.xml
+++ b/app/src/main/res/layout/activity_the_road.xml
@@ -10,7 +10,6 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/hej"
         android:scaleType="fitXY"
         android:src="@drawable/the_road_android" />
 
@@ -49,6 +48,7 @@
             android:background="@drawable/button_round"
             android:onClick="startQuest2"
             android:text="2"
+            android:enabled="false"
             android:textSize="30sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -68,6 +68,7 @@
             android:layout_marginRight="8dp"
             android:background="@drawable/button_round"
             android:onClick="startQuest3"
+            android:enabled="false"
             android:text="3"
             android:textSize="30sp"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -91,6 +92,7 @@
             android:layout_marginTop="8dp"
             android:background="@drawable/button_round"
             android:onClick="startQuest4"
+            android:enabled="false"
             android:text="4"
             android:textSize="30sp"
             app:layout_constraintHorizontal_bias="0.501"
