--- a/app/src/main/res/layout/activity_character.xml
+++ b/app/src/main/res/layout/activity_character.xml
@@ -26,7 +26,7 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:id="@+id/item1"
+                android:id="@+id/shield"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:background="@drawable/image_border"
@@ -51,7 +51,7 @@
             android:clipChildren="false">
 
             <ImageView
-                android:id="@+id/item3"
+                android:id="@+id/sword"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:background="@drawable/image_border"
@@ -134,9 +134,10 @@
 
     <ImageView
         android:id="@+id/leftHand"
-        android:layout_width="30dp"
-        android:layout_height="62dp"
+        android:layout_width="40dp"
+        android:layout_height="72dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="141dp"
         android:layout_marginTop="156dp"
         android:contentDescription="@string/leftHand"
@@ -144,29 +145,28 @@
         android:src="@drawable/stone"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.13"
-        android:layout_marginLeft="141dp"
-        android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.13" />
 
     <ImageView
         android:id="@+id/rightHand"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:contentDescription="@string/rightHand"
+        android:onClick="unequipItem"
         android:src="@drawable/stone"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.023"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.582" />
+        app:layout_constraintVertical_bias="0.575" />
 </android.support.constraint.ConstraintLayout>
