--- a/app/src/main/res/layout/activity_quest.xml
+++ b/app/src/main/res/layout/activity_quest.xml
@@ -38,6 +38,7 @@
         android:layout_marginBottom="18dp"
         android:layout_marginEnd="14dp"
         android:background="@drawable/button"
-        android:text="Next" />
+        android:text="Next"
+        android:onClick="nextButtonOnClick" />
 
 </RelativeLayout>
