--- a/app/src/main/res/layout/activity_task.xml
+++ b/app/src/main/res/layout/activity_task.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -24,11 +24,13 @@
         android:layout_height="50dp"
         android:background="@drawable/settings_small"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        android:layout_marginEnd="12dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_alignTop="@+id/imageView5"
+        android:layout_alignEnd="@+id/taskDescription" />
 
     <ImageView
+        android:id="@+id/logo"
         android:src="@drawable/code_hero_logo"
         android:layout_width="207dp"
         android:layout_height="70dp"
@@ -41,45 +43,49 @@
         android:layout_marginTop="16dp" />
 
     <TextView
-        android:id="@+id/tip"
+        android:id="@+id/taskDescription"
         style="@style/QuestDesc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:paddingLeft="40dp"
         android:paddingRight="40dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="149dp"
+        android:layout_marginTop="40dp"
         android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_below="@id/logo"/>
 
     <TextView
-        android:id="@+id/task"
+        android:id="@+id/taskContent"
         style="@style/QuestDesc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:paddingLeft="40dp"
         android:paddingRight="40dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="262dp"
+        android:layout_marginTop="40dp"
         android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_below="@id/taskDescription" />
+
+    <TextView
+        android:id="@+id/taskTip"
+        style="@style/QuestDesc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
+        android:paddingLeft="40dp"
+        android:paddingRight="40dp"
+        android:layout_marginTop="80dp"
+        android:layout_below="@id/taskContent" />
 
     <Button
         android:id="@+id/btnCheck"
         android:layout_width="98dp"
         android:layout_height="30dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:background="@drawable/button"
         android:onClick="checkCode"
         android:text="Check code"
@@ -87,6 +93,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="465dp" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignEnd="@+id/settingsBtn"
+        android:layout_marginBottom="18dp" />
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
