--- a/app/src/main/res/layout/activity_character.xml
+++ b/app/src/main/res/layout/activity_character.xml
@@ -62,7 +62,7 @@
                 android:src="@drawable/sword" />
 
             <ImageView
-                android:id="@+id/item4"
+                android:id="@+id/armor"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:background="@drawable/image_border"
@@ -181,14 +181,15 @@
         android:layout_height="42dp"
         android:src="@drawable/button"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:contentDescription="@string/xp"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintHorizontal_bias="0.037"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
         app:layout_constraintVertical_bias="0.017" />
 
     <EditText
@@ -201,7 +202,7 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="EXP:"
+        android:text="@string/xp"
         android:textSize="14sp"
         android:clickable="false"
         android:cursorVisible="false"
@@ -221,14 +222,15 @@
         android:layout_height="36dp"
         android:src="@drawable/button"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:contentDescription="@string/coins"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintHorizontal_bias="0.037"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
         app:layout_constraintVertical_bias="0.121"
         tools:layout_editor_absoluteY="66dp" />
 
@@ -237,12 +239,12 @@
         android:layout_width="153dp"
         android:layout_height="36dp"
         android:layout_marginBottom="0dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="0dp"
         android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Coins:"
+        android:text="@string/coins"
         android:textSize="14sp"
         android:clickable="false"
         android:cursorVisible="false"
